--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
 
   <h1><em>Rattle and Hum</em>: <span>A <em>U2</em> Tribute Band</span></h1>
   <h2><i>A Twin Cities Band with a Passion for U2</i></h2>
-  <img class="spotlight" alt="" aria-describedby="fbPhotosSnowliftCaption" aria-busy="false" src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/12801267_1706755509594912_8399524852260314034_n.jpg?oh=8c03c0a0c4e0827595ca0d2f40ec024c&amp;oe=5885FC02"
+  <img class="spotlight" alt="" aria-describedby="fbPhotosSnowliftCaption" aria-busy="false" src="Images/Image1.jpg"
 
-
-  </body>
-  </html>
 <div id="about">
 <h3>About</h3>
   <p>Rattle and Hum aims to capture and represent the <em>Live at Red Rocks</em> concert film and album. We perform on the highs of U2's most commercially successful, and recent material, while honoring the essential period, and all of the encompassing albums.Our ultimate goal is to provide a setlist for U2 fans that is deep and reflective, to honor U2 itself. We strive to display the idling respect we too hold for U2.If you'd like to raise a pint, sing along, and maybe shed a tear before the night is over, Rattle and Hum would gladly provide the soundtrack to your special event.</p>
