--- a/index.html
+++ b/index.html
@@ -12,25 +12,35 @@
     </ul>
   </nav> -->
 
-
-  <h1><em>Rattle and Hum</em>: <span>A <em>U2</em> Tribute Band</span></h1>
-  <h2><i>A Twin Cities Band with a Passion for U2</i></h2>
+  <h1 style="font-size:30px"><em>Rattle and Hum</em>: <span>A <em>U2</em> Tribute Band</span></h1>
   <img class="spotlight" alt="" aria-describedby="fbPhotosSnowliftCaption" aria-busy="false" src="Images/Image1.jpg"
 
 <div id="about">
-<h3>About</h3>
-  <p>Rattle and Hum aims to capture and represent the <em>Live at Red Rocks</em> concert film and album. We perform on the highs of U2's most commercially successful, and recent material, while honoring the essential period, and all of the encompassing albums.Our ultimate goal is to provide a setlist for U2 fans that is deep and reflective, to honor U2 itself. We strive to display the idling respect we too hold for U2.If you'd like to raise a pint, sing along, and maybe shed a tear before the night is over, Rattle and Hum would gladly provide the soundtrack to your special event.</p>
-  <h4>Band Members Include:</h4>
-  <p><h5>Chris Cahoon, as <i>Bono</i></h5> <h5> Eliot Brigs, as <i>The Edge</i></h5><h5>Josh Marsh, as <i>Adam Clayton</i></h5> <h5>Chris McAtte, as <i> Larry Mullen, Jr.</i></h5></p>
+<h3 style="font-size:40px"> About</h3>
+<h2 style="font-size:18px"><i>A Twin Cities Band with a Passion for U2</i></h2>
+  <p style="font-size:16px"> Rattle and Hum aims to capture and represent the <em>Live at Red Rocks</em> concert film and album. We perform on the highs of U2's most commercially successful, and recent material, while honoring the essential period, and all of the encompassing albums.Our ultimate goal is to provide a setlist for U2 fans that is deep and reflective, to honor U2 itself. We strive to display the idling respect we too hold for U2.If you'd like to raise a pint, sing along, and maybe shed a tear before the night is over, Rattle and Hum would gladly provide the soundtrack to your special event.</p>
+<h4 style="font-size:30px">Band Members:</h4>
+<div id="band">
+  <img src=Images/Cahoon.jpg alt="" style="width:185px;height:200px;">
+  <img src=Images/Briggs.jpg alt="" style="width:185px;height:200px;">
+  <img src=Images/Marsh.jpg alt=""  style="width:185px;height:200px;">
+  <img src=Images/Mcatte.jpg alt="" style="width:185px;height:200px;">
+</div>
+<p> <h5 style="font-size:16px"> Chris Cahoon, as <i>Bono</i></h5>
+<h5 style="font-size:16px"> Eliot Brigs, as <i>The Edge</i></h5>
+<h5 style="font-size:16px"> Josh Marsh, as <i>Adam Clayton</i></h5>
+<h5 style="font-size:16px"> Chris Mcatte, as <i> Larry Mullen, Jr.</i></h5>
+</p>
 </div>
 
-<h3>Events</h3>
 
-<p><h4>New Events:</h4> Please visit our contact page to schedule an event.
+<h3 style="font-size:40px">Events</h3>
+
+<p><h4 style="font-size:20px"> New Events:</h4> <h4 <style="font-size:20px"> Please visit our contact page to schedule an event.</h4>
 <p><em>Rattle and Hum currently does not have any upcoming events.</em></p>
- </p>
-
-<p><h4>Past Events and Venues:</h4>
+</p>
+  <img src=Images/RHM.jpg alt="" align=right style="width:500px;height:400px;">
+<p><h4 style="font-size:20px"> Past Events and Venues:</h4>
 <ul><li><em>Jake O'Connor's Public House</em></li>
 <li><em>O'Donovan's Irish Pub - St. Patrick's Day </em></li>
 <li><em>Jake O'Connors - St. Patrick's Day </li>
@@ -38,13 +48,11 @@
 <li><em>Rattle and Hum at The Triple Rock Social  Club.</em></li>
 
 </ul>
-
-<h3>Contact the Band</h3>
+<h3 style="font-size:40px">Contact the Band</h3>
 <ul>
-<p><h4>To schedule an event contact:</h4> Chris Cahoon </p>
-<p>Phone: 612-695-7159
+<p><h4 style="font-size:18px">To schedule an event:</h4 style="font-size:18px"> Chris Cahoon: (612)-695-7159
 </p>
-
+</p>
 
 
 </body>
