--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 <h3 style="font-size:40px">Events</h3>
 
 <p><h4 style="font-size:20px"> New Events:</h4> <h4 <style="font-size:20px"> Please visit our contact page to schedule an event.</h4>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rD928ymgI74" frameborder="0" allowfullscreen></iframe>
+
 <p><em>Rattle and Hum currently does not have any upcoming events.</em></p>
 </p>
   <img src=Images/RHM.jpg alt="" align=right style="width:500px;height:400px;">
@@ -50,10 +53,11 @@
 </ul>
 <h3 style="font-size:40px">Contact the Band</h3>
 <ul>
-<p><h4 style="font-size:18px">To schedule an event:</h4 style="font-size:18px"> Chris Cahoon: (612)-695-7159
+<p><h4 style="font-size:18px">To schedule an event:</h4 style="font-size:18px">Chris Cahoon:(612)-695-7159
 </p>
 </p>
 
+  <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpg%2Frattleandhum.rocks%2Flikes%2F&width=450&layout=standard&action=like&size=small&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe><iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2Frattleandhum.rocks%2F&width=450&height=80&layout=standard&size=small&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
 </body>
 </html>
