--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
     </ul>
   </nav> -->
 
-  <h1 style="font-size:30px"><em>Rattle and Hum</em>: <span>A <em>U2</em> Tribute Band</span></h1>
-  <img class="spotlight" alt="" aria-describedby="fbPhotosSnowliftCaption" aria-busy="false" src="Images/Image1.jpg"
+  <h1 style="font-size:65px" "float"><em>Rattle and Hum</em>: <span>A <em>U2</em> Tribute Band</span></h1>
+  <img  src="Images/Image1.jpg"class="spotlight" alt="right" aria-describedby="fbPhotosSnowliftCaption" aria-busy="false">
+
 
 <div id="about">
 <h3 style="font-size:40px"> About</h3>
-<h2 style="font-size:18px"><i>A Twin Cities Band with a Passion for U2</i></h2>
-  <p style="font-size:16px"> Rattle and Hum aims to capture and represent the <em>Live at Red Rocks</em> concert film and album. We perform on the highs of U2's most commercially successful, and recent material, while honoring the essential period, and all of the encompassing albums.Our ultimate goal is to provide a setlist for U2 fans that is deep and reflective, to honor U2 itself. We strive to display the idling respect we too hold for U2.If you'd like to raise a pint, sing along, and maybe shed a tear before the night is over, Rattle and Hum would gladly provide the soundtrack to your special event.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rD928ymgI74" frameborder="0" allowfullscreen></iframe>
+<h2 style="font-size:24px"><i>A Twin Cities Band with a Passion for U2</i></h2>
+  <p style="font-size:18px"> Rattle and Hum aims to capture and represent the <em>Live at Red Rocks</em> concert film and album. We perform on the highs of U2's most commercially successful, and recent material, while honoring the essential period, and all of the encompassing albums.Our ultimate goal is to provide a setlist for U2 fans that is deep and reflective, to honor U2 itself. We strive to display the idling respect we too hold for U2.If you'd like to raise a pint, sing along, and maybe shed a tear before the night is over, Rattle and Hum would gladly provide the soundtrack to your special event.</p>
 <h4 style="font-size:30px">Band Members:</h4>
 <div id="band">
-  <img src=Images/Cahoon.jpg alt="" style="width:185px;height:200px;">
-  <img src=Images/Briggs.jpg alt="" style="width:185px;height:200px;">
-  <img src=Images/Marsh.jpg alt=""  style="width:185px;height:200px;">
-  <img src=Images/Mcatte.jpg alt="" style="width:185px;height:200px;">
+  <img src=Images/Mcatte.jpg alt="" style="width:245px;height:245px;">
+  <img src=Images/Marsh.jpg alt=""  style="width:175px;height:245px;">
+  <img src=Images/Briggs.jpg alt="" style="width:245px;height:245px;">
+  <img src=Images/Cahoon.jpg alt="" style="width:205px;height:245px;">
 </div>
-<p> <h5 style="font-size:16px"> Chris Cahoon, as <i>Bono</i></h5>
-<h5 style="font-size:16px"> Eliot Brigs, as <i>The Edge</i></h5>
-<h5 style="font-size:16px"> Josh Marsh, as <i>Adam Clayton</i></h5>
-<h5 style="font-size:16px"> Chris Mcatte, as <i> Larry Mullen, Jr.</i></h5>
+<p> <h5 style="font-size:18px"> Chris Cahoon, as <i>Bono</i></h5>
+<h5 style="font-size:18px"> Eliot Brigs, as <i>The Edge</i></h5>
+<h5 style="font-size:18px"> Josh Marsh, as <i>Adam Clayton</i></h5>
+<h5 style="font-size:18px"> Chris Mcatte, as <i> Larry Mullen, Jr.</i></h5>
 </p>
 </div>
 
@@ -38,22 +40,20 @@
 
 <p><h4 style="font-size:20px"> New Events:</h4> <h4 <style="font-size:20px"> Please visit our contact page to schedule an event.</h4>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rD928ymgI74" frameborder="0" allowfullscreen></iframe>
-
 <p><em>Rattle and Hum currently does not have any upcoming events.</em></p>
 </p>
-  <img src=Images/RHM.jpg alt="" align=right style="width:500px;height:400px;">
+  <img src=Images/RHM.jpg alt="" align=right alt="middle" style="width:300px;height:350px;">
 <p><h4 style="font-size:20px"> Past Events and Venues:</h4>
-<ul><li><em>Jake O'Connor's Public House</em></li>
-<li><em>O'Donovan's Irish Pub - St. Patrick's Day </em></li>
-<li><em>Jake O'Connors - St. Patrick's Day </li>
-<li><em>Jake O'Connor's Tent Party </em></li>
-<li><em>Rattle and Hum at The Triple Rock Social  Club.</em></li>
+<ul><li><em>Jake O'Connor's Public House----Excelsior, MN</em></li>
+<li><em>O'Donovan's Irish Pub - St. Patrick's Day----Minneapolis, MN </em></li>
+<li><em>Jake O'Connors - St. Patrick's Day----Excelsior, MN</li>
+<li><em>Jake O'Connor's Tent Party----Excelsior, MN</em></li>
+<li><em>The Triple Rock Social Club----Minneapolis, MN</em></li>
 
 </ul>
 <h3 style="font-size:40px">Contact the Band</h3>
 <ul>
-<p><h4 style="font-size:18px">To schedule an event:</h4 style="font-size:18px">Chris Cahoon:(612)-695-7159
+<p><h4 style="font-size:30px">To schedule an event:</h4 style="font-size:24px">Chris Cahoon:(612)-695-7159
 </p>
 </p>
 
