--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 
 <h3 style="font-size:40px">Events</h3>
 
-<p><h4 style="font-size:20px"> New Events:</h4> <h4 <style="font-size:20px"> Please visit our contact page to schedule an event.</h4>
+<p style="font-size:30px"><i>"It’s no secret that a conscience can sometimes be a pest, It’s no secret ambition bites the nails of success, Every artist is a cannibal"--<b>U2</i></b></p>
+
+<p><h4 style="font-size:30px"> New Events:</h4> <h4 <style="font-size:24px"> Please visit our contact page to schedule an event.</h4>
 
 <p><em>Rattle and Hum currently does not have any upcoming events.</em></p>
 </p>
   <img src=Images/RHM.jpg alt="" align=right alt="middle" style="width:300px;height:350px;">
-<p><h4 style="font-size:20px"> Past Events and Venues:</h4>
+<p><h4 style="font-size:30px"> Past Events and Venues:</h4>
 <ul><li><em>Jake O'Connor's Public House----Excelsior, MN</em></li>
 <li><em>O'Donovan's Irish Pub - St. Patrick's Day----Minneapolis, MN </em></li>
 <li><em>Jake O'Connors - St. Patrick's Day----Excelsior, MN</li>
